k8s/fcg-services/Catalog/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: fcg-services
spec:
  selector:
    app: catalog-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
