k8s/fcg-services/Catalog/catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ingress
  namespace: fcg-services
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:

      - path: /Order
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80

      - path: /Game
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80

      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80
